# booktx

./: .codecrate.toml  .gitignore  .ruff.toml  .taskledger.toml  CHANGELOG.md  README.md  pyproject.toml
.ledger/: ledger.toml
booktx/: __init__.py  acceptance.py  agent_todo.py  agents_md.py  block_protocol.py  bootstrap.py  build.py  chapters.py  chunking.py  cli.py  cli_support.py  command_catalog.py  command_hints.py  config.py  context.py  context_organization.py  context_packs.py  context_sync.py  editor_indexes.py  epub_io.py  epub_manifest.py  epub_output_policy.py  epub_preflight.py  errors.py  glossary_audit.py  glossary_context_migration.py  glossary_diagnostics.py  glossary_match.py  glossary_tasking.py  grammar_audit.py  html_io.py  human_guide.py  identity.py  io_utils.py  judge_acceptance.py  judge_policy.py  judge_provenance.py  judge_sources.py  judge_store.py  judge_tasks.py  (+39 more)
docs/: Makefile  agent-workflow.md  api.md  architecture.md  build.sh  commands.md  concepts.md  conf.py  context.md  development.md  epub.md  human-workflows.md  index.md  maintenance.md  mypy-baseline.md  profiles.md  project-layout.md  quickstart.md  releasing.md  series.md  translation-contract.md  troubleshooting.md
scripts/: check_command_catalog.py  quality_gate.py
spinetx/: __init__.py  build.py  chapters.py  chunking.py  cli.py  config.py  context.py  epub_io.py  html_io.py  markdown_io.py  models.py  placeholders.py  validate.py
tests/: __init__.py  store_backend_fixtures.py  test_acceptance.py  test_agents_md.py  test_bootstrap.py  test_build.py  test_chapters.py  test_chunking.py  test_cli.py  test_cli_chapters.py  test_cli_context.py  test_cli_context_pack.py  test_cli_glossary.py  test_cli_isolation.py  test_cli_lexicon.py  (+70 more)
(+92 files in other folders)
